--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "devDependencies": {
         "@types/node": "^12.12.0",
         "@types/vscode": "^1.34.0",
-        "typescript": "^4.6.3"
+        "typescript": "^4.6.3",
+        "vsce": "^2.7.0"
     }
 }
